entity-registry/src/main/pegasus/com/datahub/test/invalid/InvalidRelationshipFieldType.pdl
namespace com.datahub.test.invalid

@Aspect = {
  "name": "invalidAspect"
}
record InvalidRelationshipFieldType {
  @Relationship = {
    "name": "MyRelationship",
    "entityTypes": []
  }
  recordField: record TestRecord {
      testField: optional string
  }
}